--- a/src/Component/About/About.css
+++ b/src/Component/About/About.css
@@ -1,3 +1,4 @@
+
 .main {
     display: flex;
     align-items: center;
@@ -6,10 +7,20 @@
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -1;
+    padding: 0;
+    margin: 0;
     color: rgb(150, 246, 6);
  
   }
-  
+  li{
+    list-style: none;
+  }
+  h1{
+    text-align: center;
+  }
+  h3{
+    margin: 5px;
+  }
   .about {
     width: 70%;
     height: fit-content;
@@ -29,8 +40,163 @@
   }
   .skills {
     margin-left: 45px;
-    margin-right: 50px;
   }
+  .skill{
+   color:#fff;
+   display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .skill h3{
+    margin: 10px;
+  }
+  .skill1{
+    width: 35%;
+  }
+  .skill2{
+    width: 35%;
+  }
+  .bar{
+    background: #2b5cbf;
+    display: block;
+    height: 2px;
+    border: 1px solid rgba(127, 61, 61, 0.3);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  }
+  
+  .bar:hover{
+   box-shadow: 10 14px 28px rgba(247, 226, 226, 0.25),0 10px 10px rgba(249, 243, 243, 0.22);
+  }
+  .bar span{
+    height:20px;
+    float: left;
+    background: linear-gradient(135deg,rgba(236,0,140,1)0%,rgba(252,103,103,1)100%);
+  }
+  .html{
+   width: 80%;
+    animation: html 3s;
+  }
+  .css{
+    width: 70%;
+     animation: css 3s;
+   }
+   .js{
+    width: 70%;
+     animation: js 3s;
+   }
+   .cpp{
+    width: 80%;
+     animation: cpp 3s;
+   }
+   .datstr{
+    width: 70%;
+     animation: datstr 3s;
+   }
+   .react{
+    width: 70%;
+     animation: react 3s;
+   }
+   .node{
+    width: 60%;
+     animation: node 3s;
+   }
+   .express{
+    width: 60%;
+     animation: express 3s;
+   }
+   .mongodb{
+    width: 50%;
+     animation: mongodb 3s;
+   }
+   .sql{
+    width: 50%;
+     animation: sql 3s;
+   }
+   @keyframes html{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:80%
+    }
+   }
+   @keyframes css{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:70%
+    }
+   }
+   @keyframes js{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:70%
+    }
+   }
+   @keyframes cpp{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:80%
+    }
+   }
+   @keyframes datstr{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:70%
+    }
+   }
+   @keyframes react{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:70%
+    }
+   }
+   @keyframes node{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:60%
+    }
+   }
+   @keyframes express{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:60%
+    }
+   }
+   @keyframes mongodb{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:50%
+    }
+   }
+   @keyframes sql{
+    0%{
+      width:0%;
+    }
+    100%{
+      width:50%
+    }
+   }
+   
+   
+  
   .education {
     margin-left: 45px;
     margin-right: 50px;
@@ -43,22 +209,43 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
   .about img {
-    width: 30%;
-  
+    width: 300px;
+    height: 300px;
+    box-shadow: 2px 2px 4px #341862;
     margin-left: 35%;
     border-radius: 50%;
-    box-shadow: 4px 4px 4px #341862;
+   
   }
   @media screen and (max-width: 1350px) {
     .about {
       margin-top: 10%;
     }
     .about img {
-      width: 50%;
-  
-      margin-left: 25%;
-      border-radius: 50%;
-      box-shadow: 4px 4px 4px #341862;
+      margin-left: 20%;
+      border-radius: 50% ;
+      box-shadow: 2px 2px 4px #341862;
+    }
+  }
+  .code{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .code img{
+   padding: 10px;
+   height: 60px;
+    width: 60px;
+    border: none;
+    box-shadow: 1px 1px ;
+  }
+  .code :hover img{
+    transform-origin: center;
+    animation: scale 500ms ease-in-out forwards;
+   }
+   @keyframes scale {
+    to {
+      transform: scale(1.3);
     }
   }
   @media screen and (max-width:800px){
