--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,9 @@
- /* .sec1{
-
-
-    width: 100%;
-    height:100vh;
-    top: 0px;
-    background:rgb(167, 146, 146);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:larger;
- }
- .sec2{
-    width: 100%;
-    height:100vh;
-    top: 0px;
-    background:rgb(146, 161, 167);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:larger;
- }
- .sec3{
-    width: 100%;
-    height:100vh;
-    top: 0px;
-    background:rgb(72, 148, 37);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:larger;
- }
- .sec4{
-    width: 100%;
-    height:100vh;
-    top: 0px;
-    background:rgb(66, 20, 20);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:larger;
- } */
+ 
 *{
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 0px;
+   
 }
 
 .nav ul{
@@ -51,8 +11,8 @@
         align-items:center;
         width:100%;
         justify-content:space-evenly;
-        
-        position:fixed;
+        position: absolute;
+        /* position:fixed; */
         z-index:50;
         color:white;
         margin-top: 20px;
