--- a/src/Component/Project/Project.css
+++ b/src/Component/Project/Project.css
@@ -1,61 +1,73 @@
-.bd{
+
+.bd {
     display: flex;
     flex-direction: column;
     background: rgba(2, 2, 32, 0.99);
     align-items: center;
-    
-}
-.bd .heading{
+  }
   
+  .bd .heading {
     margin-top: 80px;
-   height: 50px;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-   font-style: italic;
+    height: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
+    overflow: hidden;
+  }
   
-}
-.bd .heading h1{
-  color: rgb(174, 130, 63);  
-  font-size: 50px;
-  text-shadow: 8px 8px  rgb(0, 0, 0);
-}
-.project{
- height: 100%;
- width: 100%;
- 
- /* background-repeat: no-repeat;
- background-size: cover; */
- display: flex;
- flex-wrap: wrap;
-justify-content: space-around;
-align-items: center;
-
-}
-p{
+  .bd .heading h1 {
+    color: rgb(174, 130, 63);
+    font-size: 50px;
+    text-shadow: 8px 8px rgb(0, 0, 0);
+  }
+  
+  .project {
+    height: 100%;
+    width: 70%;
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .x p {
+    font-size: large;
+    margin-top: 70px;
+  }
+  
+  .x {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    margin-bottom: 20px;
+  }
+  
+  p {
     color: aliceblue;
-}
-.project1{
+  }
+  
+  .project1 {
     border-radius: 15px;
-    height: 280px;
-    width: 260px;
-    margin-left: 90px;
-    margin-right: 90px;
+    height: 250px;
+    width: 230px;
     padding: 2rem 1rem;
-    background:url(contactbg.jpg);
+    background: url(contactbg.jpg);
     position: relative;
     margin-top: 100px;
     display: flex;
     align-items: flex-end;
-    box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
     transition: 0.5s ease-in-out;
-    margin-bottom: 100px;
-}
-.info button{
-    height: 30px;
-}
-.project1:hover{
-    transform: translateY(20px);
-}
-.project1::before{
+  }
+  
+  .project1.animate {
+    /* transform: translateX(80px); */
+    transform: scale(1.2);
+  }
+  
+  .project1::before {
     content: "";
     position: absolute;
     top: 0;
@@ -63,18 +75,18 @@ p{
     display: block;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom,rgba(39, 42, 42, 0.5),rgb(28, 30, 28));
+    background: linear-gradient(to bottom, rgba(39, 42, 42, 0.5), rgb(28, 30, 28));
     z-index: 2;
     transition: 0.5s all;
     opacity: 0;
-}
-
-.project1:hover::before{
-   opacity: 1;
-   border-radius: 15px;
-}
-
-.project1 .info{
+  }
+  
+  .project1:hover::before {
+    opacity: 1;
+    border-radius: 15px;
+  }
+  
+  .project1 .info {
     position: relative;
     z-index: 3;
     color: #fff;
@@ -82,18 +94,22 @@ p{
     transform: translateY(30px);
     transition: 0.5s all;
     font-style: italic;
-}
-.info button a{
+  }
+  
+  .info button a {
     text-decoration: none;
-}
-.info button{
-  border-radius: 4px;
-}
-.info button:hover{
-  box-shadow: 1px 4px 4px rgb(124, 112, 93) ; 
-}
-.project1:hover .info{
+  }
+  
+  .info button {
+    border-radius: 4px;
+  }
+  
+  .info button:hover {
+    box-shadow: 1px 4px 4px rgb(124, 112, 93);
+  }
+  
+  .project1:hover .info {
     opacity: 1;
     transform: translateY(0px);
-    
-}
+  }
+  
